--- a/bedrock/foundation/templates/foundation/moco.html
+++ b/bedrock/foundation/templates/foundation/moco.html
@@ -44,6 +44,7 @@
     {# L10n: This "Chair" is the chairperson of the board of directors, not something to sit on #}
     <li><a href="https://blog.mozilla.org/press/bios/mitchell-baker/">Mitchell Baker</a>, {{ _('Chair') }}</li>
     <li><a href="https://blog.mozilla.org/press/bios/chris-beard/">Chris Beard</a></li>
+    <li><a href="https://mozillians.org/u/juliehanna/">Julie Hanna</a></li>
     <li><a href="https://www.linkedin.com/in/reidhoffman">Reid Hoffman</a></li>
     <li><a href="http://www.hbs.edu/klakhani">Karim Lakhani</a></li>
   </ul>
