[fix bug 1321033] Hello EOL legal doc cleanup/archival.

--- a/bedrock/privacy/templates/privacy/archive/index.html
+++ b/bedrock/privacy/templates/privacy/archive/index.html
@@ -33,6 +33,13 @@
       </ul>
     </section>
     <section>
+      <h2>{{ _('Hello') }}</h2>
+      <ul>
+        <li><a href="{{ url('privacy.archive.hello-2014-11') }}">{{ _('November 2014') }}</a></li>
+        <li><a href="{{ url('privacy.archive.hello-2016-03') }}">{{ _('March 2016') }}</a></li>
+      </ul>
+    </section>
+    <section>
       <h2>{{ _('Thunderbird') }}</h2>
       <ul>
         <li><a href="{{ url('privacy.archive.thunderbird-2010-06') }}"><time datetime="2010-06">{{ _('June 2010') }}</time></a></li>
