--- a/media/css/foundation/annual2015.less
+++ b/media/css/foundation/annual2015.less
@@ -6,12 +6,17 @@
 
 .banner {
     .at2x('/media/img/foundation/annualreport/2015/bg-banner-desktop.jpg', 1280px, 612px);
-    background-position: bottom center;
+    background-position: top center;
     background-repeat: no-repeat;
+
+    @media (max-width: @breakDesktop) {
+        background-position: top right -100px;
+    }
 
     @media (max-width: @breakTablet) {
         .background-size(480px 290px);
         background-image: url('/media/img/foundation/annualreport/2015/bg-banner-mobile.jpg');
+        background-position: top right -20px;
     }
 
     @media (max-width: @breakTablet) and (-webkit-min-device-pixel-ratio: 1.5),
