--- a/bedrock/mozorg/templates/mozorg/home/includes/takeover-2016.html
+++ b/bedrock/mozorg/templates/mozorg/home/includes/takeover-2016.html
@@ -62,8 +62,8 @@
         <input type="hidden" name="presets" value="{{ donate_params.presets }}">
 
         {# GA params #}
-        <input type="hidden" name="ref" value="EOYFR2016">
-        <input type="hidden" name="utm_campaign" value="EOYFR2016">
+        <input type="hidden" name="ref" value="EOY2016">
+        <input type="hidden" name="utm_campaign" value="EOY2016">
         <input type="hidden" name="utm_source" value="mozilla.org">
         <input type="hidden" name="utm_medium" value="referral">
         <input type="hidden" name="utm_content" value="{{ variant|safe }}">
