Add links to 2015 annual report and tax filings

--- a/bedrock/foundation/templates/foundation/documents/index.html
+++ b/bedrock/foundation/templates/foundation/documents/index.html
@@ -170,6 +170,14 @@
         <li><a href="https://static.mozilla.com/moco/en-US/pdf/Mozilla_Audited_Financials_2014.pdf">{{ _('2014 Audited financial statements') }}</a></li>
       </ul>
     </li>
+    <li>{{ _('2015 filings and related documents') }}
+      <ul>
+        <li>{{ _('2015 annual report:') }} <q><a href="{{ url('foundation.annualreport.2015.index') }}">{{ _('State of Mozilla 2015') }}</a></q></li>
+        <li><a href="{{ url('foundation.annualreport.2015.faq') }}">{{ _('Mozilla 2015 financial FAQ') }}</a></li>
+        <li><a href="https://static.mozilla.com/moco/en-US/pdf/2015_Mozilla_Foundation_Forms_990_Public_Disclosure.pdf">{{ _('2015 Form 990') }}</a></li>
+        <li><a href="https://static.mozilla.com/moco/en-US/pdf/2015_Mozilla_Audited_Financial_Statement.pdf">{{ _('2015 Audited financial statements') }}</a></li>
+      </ul>
+    </li>
   </ul>
 
 {% endblock %}
