[bug 1319244] Remove activist search traffic cop
Increasing the test audience to 100% of English visitors

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -8,20 +8,14 @@
 
 {% set body_id = "index" %}
 
-{% block experiments %}
-  {% if LANG.startswith('en-') and switch('experiment-search-activist') %}
-    {% javascript 'experiment-search-activist' %}
-  {% endif %}
-{% endblock %}
-
 {% block js %}
-  {% if version == 'b' and switch('mozorg-search-activist') %}
+  {% if LANG.startswith('en-') and switch('mozorg-search-activist') %}
     {% javascript 'search-activist' %}
   {% endif %}
 {% endblock %}
 
 {% block search %}
-  {% if version == 'b' and switch('mozorg-search-activist') %}
+  {% if LANG.startswith('en-') and switch('mozorg-search-activist') %}
     {% include 'includes/google-search-activist.html' %}
   {% endif %}
 {% endblock %}
