[bug 1319244] Test developer and general search
* Convert search include to macro.
* Use traffic cop for Firefox pages.

--- a/bedrock/mozorg/templates/mozorg/about.html
+++ b/bedrock/mozorg/templates/mozorg/about.html
@@ -4,6 +4,8 @@
 
 {% extends "mozorg/base-resp.html" %}
 
+{% from 'macros.html' import google_custom_search with context %}
+
 {% block page_title %}{{ _('Get to know Mozilla') }}{% endblock %}
 {% block body_id %}about{% endblock %}
 {% block body_class %}sand{% endblock %}
@@ -22,7 +24,7 @@
   {% javascript 'about_video' %}
 
   {% if LANG.startswith('en-') and switch('mozorg-search-activist') %}
-    {% javascript 'search-activist' %}
+    {% javascript 'custom-search' %}
   {% endif %}
 {% endblock %}
 
@@ -30,8 +32,9 @@
 <main>
   <header class="page-header">
   {% if LANG.startswith('en-') and switch('mozorg-search-activist') %}
-    {% include 'includes/google-search-activist.html' %}
+    {{ google_custom_search(settings.GOOG_CUSTOM_SEARCH_TYPES['activist'], 'moz-search-activist', _('Cybersecurity'), _('Net Neutrality, Encryption, Surveillance, Copyright Law, Cybersecurity')) }}
   {% endif %}
+
     <h1><span class="content">{{ _('Get to know Mozilla') }}</span></h1>
   </header>
 
