--- a/media/css/base/page-not-found.less
+++ b/media/css/base/page-not-found.less
@@ -12,6 +12,10 @@
     .clearfix;
 }
 
+#tabzilla:before {
+    background-color: #bbb;
+}
+
 #error-content {
     .span(6);
     .clearfix;
@@ -34,6 +38,22 @@
         color: @linkBlueHover;
     }
 }
+
+
+// Search
+.moz-search {
+    background-color: #9b9b9b;
+    border-bottom: 2px solid #fff;
+
+    .content {
+        max-width: @widthDesktop - 60px;
+    }
+}
+
+[lang^="en"] #outer-wrapper {
+    border-top: 0;
+}
+
 
 /* {{{ Tablet  Layout: 768px */
 
