--- a/media/css/firefox/channel.less
+++ b/media/css/firefox/channel.less
@@ -33,7 +33,7 @@
 
 #masthead {
     background: #005da5;
-    height: 52px;
+    min-height: 52px;
     padding: 0;
     width: 100%;
 
@@ -673,4 +673,15 @@ html[lang^="en"] {
 
 #colophon {
     margin: 0;
+}
+
+/*--------------------------------------------------------------------------*/
+// Search
+
+.moz-search {
+    background-color: #1e346e;
+
+    .content {
+        max-width: @widthDesktop;
+    }
 }
