--- a/media/css/mozorg/technology.scss
+++ b/media/css/mozorg/technology.scss
@@ -905,3 +905,12 @@ html[dir="rtl"] #blogs {
         }
     }
 }
+
+/*--------------------------------------------------------------------------*/
+// Search
+
+.moz-search {
+    .content {
+        max-width: $width-desktop;
+    }
+}
