--- a/media/css/firefox/developer.less
+++ b/media/css/firefox/developer.less
@@ -238,6 +238,21 @@
     }
 }
 
+/*--------------------------------------------------------------------------*/
+// Search
+.moz-search {
+    background-color: #005ba7;
+    border-bottom: 2px solid #fff;
+
+    .content {
+        max-width: @widthDesktop;
+    }
+}
+
+[lang^='en'] #outer-wrapper {
+    border-top: 0;
+}
+
 
 @media (max-width: @breakDesktop) and (min-width: @breakTablet) {
     #masthead,
