Bug 1317260: Update CA Cert Policy document
This updates the file based on the markdown from the
repo and documents updating it in future in the template
itself. It also deletes the sub pages, and adds
tests and redirects for the same.

--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/security/certs/index.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/security/certs/index.html
@@ -8,7 +8,7 @@
 {% block body_class %}sand{% endblock %}
 
 {% block article %}
-  <h1 class="title-banner">{{ _('Mozilla CA Certificate Store') }}</h1>
+  <h1 class="title-shadow-box">{{ _('Mozilla CA Certificate Store') }}</h1>
 
   <p>{{ _('Mozillaʼs CA Certificate Program governs inclusion of root certificates in <a href="%s">Network Security Services (NSS)</a>, a set of open source libraries designed to support cross-platform development of security-enabled client and server applications. The NSS root certificate store is used in Mozilla products such as the Firefox browser, and is also used by other companies in a variety of products.')|format('https://developer.mozilla.org/en-US/docs/NSS') }}</p>
 
