--- a/bedrock/newsletter/templates/newsletter/firefox.html
+++ b/bedrock/newsletter/templates/newsletter/firefox.html
@@ -11,6 +11,12 @@
 
 {% block body_class %}newsletter-mozilla{% endblock %}
 
+{% block optimizely %}
+  {% if switch('firefox-newsletter-optimizely') %}
+    {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block page_css %}
   {% stylesheet 'newsletter-firefox' %}
 {% endblock %}
