Fix Bug 1323882 - Update Sylvie's bio on the Leadership Page

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -854,13 +854,13 @@
         <div class="person-bio">
           <p>
           {% trans %}
-            Sylvie Veilleux is Vice President of IT at the Mozilla Corporation. Sylvie joined Mozilla in December 2012 to deliver strategic IT services and build effective and efficient global core IT services. In this role, Sylvie is responsible for the delivery and operations of Mozilla’s IT business applications, information management, SaaS, IaaS, communication and collaboration services, infrastructure and internal end user services.
+            Sylvie Veilleux is Vice President of Information Technology Services and Security. Sylvie joined Mozilla in December 2012 to define and execute a Global IT transformation strategy. In this role, Sylvie is responsible for the strategy, execution and operations of Mozilla’s business technology, information security, data management, network and infrastructure services.
           {% endtrans %}
           </p>
 
           <p>
           {% trans %}
-            Before joining Mozilla, Sylvie was at Salesforce.com where she led the IT Infrastructure Engineering and Operations technology transformation for a high growth distributed organization. Prior to that, Sylvie was at Franklin Templeton Investments as VP Infrastructure Platform Architecture and Engineering and, in a previous position, managed all aspects of IT Information Management services and strategy. Earlier in her career, Sylvie worked at Apple in growing and scaling database services; had a quick stint at a startup (relocated from Quebec, Canada, to the Bay Area); spent several years at Oracle as a database architect consultant for high performance and scalable architecture; and worked in Canadian provincial government ministries.
+            Before joining Mozilla, Sylvie was at Salesforce.com where she led the IT Infrastructure Engineering and Operations technology transformation for a high growth distributed organization. Prior to that, Sylvie was at Franklin Templeton Investments as VP Infrastructure Platform Architecture and Engineering and, in a previous position, was responsible for IT Information Architecture and Data Management. Earlier in her career, Sylvie worked at Apple in redesigning and scaling database services for Apple's epic growth. She had a quick stint in 2000 at a startup (relocated from Quebec, Canada, to the Bay Area); spent several years at Oracle Canada as a database architect and consultant for high performance and scalable architectures; and worked in Canadian provincial government ministries. Sylvie studied Computer Sciences in Quebec, Canada.
           {% endtrans %}
           </p>
         </div>
