--- a/bedrock/firefox/templates/firefox/developer.html
+++ b/bedrock/firefox/templates/firefox/developer.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block experiments %}
-  {% if LANG.startswith('en-') and switch('mozorg-search-developer') %}
+  {% if LANG.startswith('en-') and switch('experiment-search-developer') %}
     {% javascript 'experiment-search-developer' %}
   {% endif %}
 {% endblock %}
