[fix bug 1323841] Add Ashley Boyd to leadership page
Add permalinks to bios
Update icon font

--- a/media/css/firefox/feedback.less
+++ b/media/css/firefox/feedback.less
@@ -6,9 +6,10 @@
 
 @font-face {
     font-family: 'FA-Icons-Contact';
-    src: url('/media/fonts/icons-contact.eot?#iefix') format('embedded-opentype'),
-         url('/media/fonts/icons-contact.woff') format('woff'),
-         url('/media/fonts/icons-contact.ttf') format('truetype');
+    src: url('/media/fonts/icons-contact.eot?20-12-2016#iefix') format('embedded-opentype'),
+         url('/media/fonts/icons-contact.woff2?20-12-2016') format('woff2'),
+         url('/media/fonts/icons-contact.woff?20-12-2016') format('woff'),
+         url('/media/fonts/icons-contact.ttf?20-12-2016') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -182,14 +183,13 @@ main {
     }
 
     .twitter:before {
-        content: '\e804';
+        content: '\e809';
     }
 
     .email:before {
         content: '\e806';
     }
 }
-
 
 
 /*-------------------------------------------------------------------------*/
