--- a/media/css/mozorg/leadership.scss
+++ b/media/css/mozorg/leadership.scss
@@ -7,9 +7,10 @@
 
 @font-face {
     font-family: 'FA-Icons-Contact';
-    src: url('/media/fonts/icons-contact.eot?#iefix') format('embedded-opentype'),
-         url('/media/fonts/icons-contact.woff') format('woff'),
-         url('/media/fonts/icons-contact.ttf') format('truetype');
+    src: url('/media/fonts/icons-contact.eot?20-12-2016#iefix') format('embedded-opentype'),
+         url('/media/fonts/icons-contact.woff2?20-12-2016') format('woff2'),
+         url('/media/fonts/icons-contact.woff?20-12-2016') format('woff'),
+         url('/media/fonts/icons-contact.ttf?20-12-2016') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -553,7 +554,7 @@
     .since,
     .note,
     .elsewhere,
-    .download {
+    .utility {
         @include font-size(12px);
     }
 
@@ -567,7 +568,7 @@
     }
 
     .elsewhere,
-    .download {
+    .utility {
         margin-top: 1em;
 
         a {
@@ -584,9 +585,10 @@
         }
 
         a.website:before { content: '\e803'; } /* '' */
-        a.twitter:before { content: '\e804'; } /* '' */
+        a.twitter:before { content: '\e809'; } /* '' */
         a.book:before { content: '\e80e'; } /* '' */
         a.file:before { content: '\e810'; } /* '' */
+        a.link:before { content: '\e801'; } /* '' */
     }
 
     .callout {
@@ -596,8 +598,8 @@
     }
 
     .elsewhere,
-    .person-bio,
-    .download {
+    .utility,
+    .person-bio {
         @include hidden;
     }
 
@@ -691,8 +693,8 @@
     width: auto;
 
     .elsewhere,
-    .person-bio,
-    .download {
+    .utility,
+    .person-bio {
         display: block;
     }
 
@@ -858,7 +860,7 @@
     }
 
     .elsewhere,
-    .download,
+    .utility,
     .person-bio {
         display: block;
     }
