--- a/media/css/mozorg/contact-spaces.less
+++ b/media/css/mozorg/contact-spaces.less
@@ -6,9 +6,10 @@
 
 @font-face {
     font-family: 'FA-Icons-Contact';
-    src: url('/media/fonts/icons-contact.eot?#iefix') format('embedded-opentype'),
-         url('/media/fonts/icons-contact.woff') format('woff'),
-         url('/media/fonts/icons-contact.ttf') format('truetype');
+    src: url('/media/fonts/icons-contact.eot?20-12-2016#iefix') format('embedded-opentype'),
+         url('/media/fonts/icons-contact.woff2?20-12-2016') format('woff2'),
+         url('/media/fonts/icons-contact.woff?20-12-2016') format('woff'),
+         url('/media/fonts/icons-contact.ttf?20-12-2016') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -494,14 +495,13 @@
 .card .extra a.doc:before { content: '\e810'; } /* '' */
 .card .extra a.book:before { content: '\e80e'; } /* '' */
 .card .extra a.irc:before { content: '\e811'; } /* '' */
-.card .extra a.twitter:before { content: '\e804'; } /* '' */
+.card .extra a.twitter:before { content: '\e809'; } /* '' */
 .card .extra a.facebook:before { content: '\e802'; } /* '' */
-.card .extra a.gplus:before { content: '\e80a'; } /* '' */
-.card .extra a.instagram:before { content: '\e80c'; } /* '' */
-.card .extra a.tumblr:before { content: '\e809'; } /* '' */
-.card .extra a.vimeo:before { content: '\e808'; } /* '' */
-.card .extra a.youtube:before { content: '\e807'; } /* '' */
-.card .extra a.flickr:before { content: '\e801'; } /* '' */
+.card .extra a.gplus:before { content: '\f0d5'; } /* '' */
+.card .extra a.instagram:before { content: '\e80a'; } /* '' */
+.card .extra a.youtube:before { content: '\e80c'; } /* '' */
+.card .extra a.flickr:before { content: '\e807'; } /* '' */
+
 
 
 // @Gallery - for a gallery of thumbnail images
