bug1320080-Newletter icon in thai page fixed

--- a/media/css/newsletter/moznewsletter-subscribe.less
+++ b/media/css/newsletter/moznewsletter-subscribe.less
@@ -48,6 +48,7 @@
         padding: 10px 0 20px 180px;
         text-align: left;
         text-shadow: none;
+        height: 135px;
 
         h3 {
             .font-size(40px);
