--- a/bedrock/firefox/templates/firefox/channel/android.html
+++ b/bedrock/firefox/templates/firefox/channel/android.html
@@ -20,7 +20,7 @@
       <h2>{{_('Beta')}}</h2>
       <p>{{_('Try the latest Android features, before they get released to the rest of the world.')}}</p>
     </header>
-    {{ download_firefox('beta', platform='android', force_direct=True, alt_copy=_('Download'), dom_id="android-beta-download") }}
+    {{ download_firefox('beta', platform='android', alt_copy=_('Download'), dom_id="android-beta-download") }}
     <p class="notice">
       {{_('Firefox Beta automatically sends feedback to Mozilla.')}}
       <a href="{{ url('privacy.notices.firefox') + '#telemetry' }}">{{_('Learn more')}}</a>
@@ -47,7 +47,7 @@
       <h2>{{_('Aurora')}}</h2>
       <p>{{_('Help determine what features will go into the next Firefox for Android.')}}</p>
     </header>
-    {{ download_firefox('alpha', platform='android', force_direct=True, alt_copy=_('Download'), dom_id="android-aurora-download") }}
+    {{ download_firefox('alpha', platform='android', alt_copy=_('Download'), dom_id="android-aurora-download") }}
     <p class="notice">
       {{_('Firefox Aurora automatically sends feedback to Mozilla.')}}
       <a href="{{ url('privacy.notices.firefox') + '#telemetry' }}">{{_('Learn more')}}</a>
@@ -57,6 +57,7 @@
     <div class="container">
       <ul>
         <li><a href="{{ firefox_url('android', 'notes', 'aurora') }}">{{_('Release Notes')}}</a></li>
+        <li><a href="https://support.mozilla.org/kb/participate-firefox-android-testing-program">{{_('Learn more')}}</a></li>
         <li><a href="{{ firefox_url('android', 'all', 'aurora') }}">{{_('All Languages and Builds')}}</a></li>
       </ul>
     </div>
@@ -74,7 +75,7 @@
         <p>{{_('Test brand new features daily (or… nightly). Enjoy at your own risk.')}}</p>
       {% endif %}
     </header>
-    {{ download_firefox('nightly', platform='android', force_direct=True, alt_copy=_('Download'), dom_id="android-nightly-download") }}
+    {{ download_firefox('nightly', platform='android', alt_copy=_('Download'), dom_id="android-nightly-download") }}
     <p class="notice">
       {{_('Firefox Nightly automatically sends feedback to Mozilla.')}}
       <a href="{{ url('privacy.notices.firefox') + '#telemetry' }}">{{_('Learn more')}}</a>
